@@ -3,14 +3,14 @@ package com.reso.first_spring_app.services;
 import com.reso.first_spring_app.dto.CategoryDTO;
 import com.reso.first_spring_app.entities.Category;
 import com.reso.first_spring_app.repositories.CategoryRepository;
-import com.reso.first_spring_app.services.exception.EntityNotFoundException;
+import com.reso.first_spring_app.services.exception.ResourceNotFoundException;
+import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryService {
@@ -21,14 +21,13 @@ public class CategoryService {
     @Transactional(readOnly = true)
     public List<CategoryDTO> findAll(){
         List<Category> list = repository.findAll();
-
-        return  list.stream().map(x -> new CategoryDTO(x)).collect(Collectors.toList());
+        return  list.stream().map(CategoryDTO::new).toList();
     }
 
     @Transactional(readOnly = true)
     public CategoryDTO findById(Long id) {
         Optional<Category> obj = repository.findById(id);
-        Category entity =  obj.orElseThrow(() -> new EntityNotFoundException("Entity not found"));
+        Category entity =  obj.orElseThrow(() -> new ResourceNotFoundException("Entity not found"));
 
         return new CategoryDTO(entity);
     }
@@ -39,5 +38,17 @@ public class CategoryService {
         entity.setName(dto.getName());
         entity = repository.save(entity);
         return new CategoryDTO(entity);
+    }
+
+    @Transactional
+    public CategoryDTO update(CategoryDTO dto, Long id) {
+        try{
+            Category entity = repository.getOne(id);
+            entity.setName(dto.getName());
+            entity = repository.save(entity);
+            return new CategoryDTO(entity);
+        }catch (EntityNotFoundException e){
+            throw new ResourceNotFoundException("Id not found! -> id: " +  id);
+        }
     }
 }
